# yama

./: .gitignore  CMakeLists.txt  README.md
cmake/: common.cmake  find_configure_package.cmake  module.cmake  module_benchmark.cmake  module_test.cmake  project.cmake  service.cmake  variables.cmake  yama.cmake
cmake/function/: cmake_log.cmake  coverage.cmake  execute.cmake  filter_list.cmake  filter_source_files.cmake  import_package.cmake  node_exec.cmake  output_bin.cmake  set_install.cmake  set_not_exists.cmake  shell_generator.cmake  subdir_list.cmake  use_proj_folders.cmake  use_source_folders.cmake  vs_proj_debug.cmake
src/ggp/: gpp.proto
src/protocol/: protocol.proto
tests/: CMakeLists.txt
tests/tcp_transceiver_test/: CMakeLists.txt  tcp_transceiver_test.cc
yterm/: CMakeLists.txt
yterm/include/: configs.h
yterm/include/general/: yama_errors.h
yterm/include/log/: Logger.h  LoggerHandlerInterface.h
yterm/include/terminals/: terminal.h
yterm/include/transport/: tcp_transceiver.h
yterm/src/log/: Logger.cc
yterm/src/transport/: tcp_tranceiver.cc
